<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:layout_gravity="center"/>

        <Button
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:id="@+id/button_new_game"
            android:text="@string/new_game"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:id="@+id/button_setting"
            android:text="@string/setting"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:id="@+id/button_high_score"
            android:text="@string/high_score"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:id="@+id/button_quit"
            android:text="@string/quit"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>